组织架构服务
名称字段处理，组织权限管理模块

--- a/starter-mpass/starter-mpass-server/pom.xml
+++ b/starter-mpass/starter-mpass-server/pom.xml
@@ -12,10 +12,22 @@
     <artifactId>starter-mpass-server</artifactId>
     <dependencies>
         <!-- 基础业务组合 -->
+        <!--############### org ###############-->
         <dependency>
             <groupId>com.ibyte</groupId>
-            <artifactId>sys-monitor-core</artifactId>
+            <artifactId>sys-monitor-org</artifactId>
         </dependency>
+        <!--############### monitor ###############-->
+<!--        <dependency>-->
+<!--            <groupId>com.ibyte</groupId>-->
+<!--            <artifactId>sys-monitor-core</artifactId>-->
+<!--        </dependency>-->
+        <!--############### attach ###############-->
+<!--        <dependency>-->
+<!--            <groupId>com.ibyte</groupId>-->
+<!--            <artifactId>sys-attach-core</artifactId>-->
+<!--        </dependency>-->
+
     </dependencies>
     <build>
         <plugins>
