--- a/package/mvn-parent/pom.xml
+++ b/package/mvn-parent/pom.xml
@@ -35,7 +35,7 @@
         <commons.text.version>1.7</commons.text.version>
         <commons.io.version>2.6</commons.io.version>
         <commons.beanutils.version>1.9.3</commons.beanutils.version>
-        <commons.compress.version>1.19</commons.compress.version>
+        <commons.compress.version>1.18</commons.compress.version>
         <commons.exec.version>1.3</commons.exec.version>
         <mysql.version>5.1.46</mysql.version>
         <h2.version>1.4.197</h2.version>
@@ -262,6 +262,22 @@
             </dependency>
 
             <!-- 业务包 -->
+            <dependency>
+                <groupId>com.ibyte</groupId>
+                <artifactId>sys-org-api</artifactId>
+                <version>${mpaas.version}${deploy.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ibyte</groupId>
+                <artifactId>sys-org-core</artifactId>
+                <version>${mpaas.version}${deploy.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ibyte</groupId>
+                <artifactId>sys-org-client</artifactId>
+                <version>${mpaas.version}${deploy.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.ibyte</groupId>
                 <artifactId>sys-monitor-api</artifactId>
