--- a/common/common-base/src/main/resources/init.properties
+++ b/common/common-base/src/main/resources/init.properties
@@ -15,6 +15,6 @@ spring.mvc.favicon.enabled=false
 management.endpoints.web.exposure.include=*
 management.health.mail.enabled=false
 ##\u652F\u6301\u7684\u5BA2\u6237\u7AEF\u6807\u793A\u4FE1\u606F
-#kmss.clent.kk.header=
-#kmss.clent.kk.ua=
+#mpass.clent.kk.header=
+#mpass.clent.kk.ua=
 
