添加文档内容字段
调用具体服务接口，添加定时任务执行 /`SysJobActuator`实现`Runnable`

--- a/sys-manage/sys-job/sys-job-core/pom.xml
+++ b/sys-manage/sys-job/sys-job-core/pom.xml
@@ -11,6 +11,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>sys-job-core</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.ibyte</groupId>
+            <artifactId>mvn-common-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ibyte</groupId>
+            <artifactId>sys-job-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
