--- a/framework/framework-plugin-api/pom.xml
+++ b/framework/framework-plugin-api/pom.xml
@@ -15,7 +15,7 @@
     <description>
         framework-plugin-api-独立提供
         - 目前软件开发阶段防止期权Copy,谢谢支持~
-        - 关注公众号"码农架构"发送 "mPass"可获取最新更新地址~
+        - 关注公众号"码农架构"发送 "mPaaS"可获取最新更新地址~
     </description>
 
     <dependencies>
